--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DYOR Ltd.</title>
+    <title>DYOR - Do Your Own Research Ltd.</title>
+    <meta name="description" content="Do Your Own Research Ltd specialises in web3 consultancy and development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Knewave&family=Space+Grotesk&display=swap"
       rel="stylesheet"
@@ -23,8 +26,8 @@
       }
       body {
         background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-        background-size: 400% 400%;
-        animation: gradient 120s ease infinite;
+        background-size: 300% 300%;
+        animation: gradient 60s ease infinite;
         height: 100vh;
         padding: 2rem;
         margin: 0;
