fix: add viewport

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8"/>
     <title>DYOR - Do Your Own Research Ltd.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Do Your Own Research Ltd specialises in web3 consultancy and development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -158,7 +160,7 @@
       ((w, d) => {
         const x = d.getElementById("date");
         x.innerHTML = `© Copyright ${new Date().getFullYear()}`;
-        console.log('Hi there.');
+        console.log('gm fellow console inspectooooor.');
       })(window, document);
     </script>
   </body>
