--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
         background-size: 300% 300%;
         animation: gradient 60s ease infinite;
-        height: 100vh;
-        padding: 2rem;
+        min-height: 100vh;
+        padding: 2rem 1rem;
         margin: 0;
         display: flex;
         flex-direction: column;
