--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <title>DYOR - Do Your Own Research Ltd.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Do Your Own Research Ltd specialises in web3 consultancy and development"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="favicon.png">
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Knewave&family=Space+Grotesk&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Space+Grotesk&display=swap" rel="stylesheet">
     <style>
       *,
       *::before,
@@ -64,20 +61,20 @@
         justify-content: space-between;
       }
       h1 {
-        font-family: "Knewave", cursive;
+        font-family: "Bungee Shade", sans-serif;
         font-size: 5rem;
         margin-bottom: 0;
         opacity: 0.5;
         text-shadow: 0 0 0.4rem rgba(0,0,0,.1);
       }
       h2 {
-        font-family: "Knewave", cursive;
+        font-family: "Bungee Shade", sans-serif;
         font-size: 2rem;
         opacity: 0.9;
         text-shadow: 0 0 0.4rem rgba(0,0,0,.1);
       }
       h3 {
-        font-family: "Knewave", cursive;
+        font-family: "Bungee Shade", sans-serif;
         margin-top: 1rem;
       }
       p {
@@ -104,7 +101,7 @@
         margin: 1rem;
       }
       img {
-        height: 2rem
+        height: 2.5rem
       }
     </style>
   </head>
@@ -142,6 +139,11 @@
           <li>
             <a href="https://testnet.sokel.fi">
               <img src="sokel.svg" alt="Sokel"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://mevpanda-frontend.vercel.app/">
+              <img src="panda.svg" alt="MEVPanda"/>
             </a>
           </li>
           <li>
