fix: live mevpanda url

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </a>
           </li>
           <li>
-            <a href="https://mevpanda-frontend.vercel.app/">
+            <a href="https://mevpanda.com/">
               <img src="panda.svg" alt="MEVPanda"/>
             </a>
           </li>
