--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </main>
     <footer>
       <span id="date"></span>
-      <a href="mailto:gm@dyor.biz">Get in touch</a>
+      <a href="mailto:gm@dyor.ltd">Get in touch</a>
     </footer>
     <script>
       ((w, d) => {
