feat: add eden rpc speedtest

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Space+Grotesk&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Space+Grotesk" rel="stylesheet">
     <style>
       *,
       *::before,
@@ -133,7 +133,12 @@
           </li>
           <li>
             <a href="https://floor.xyz">
-              <img src="floordao.jpeg" alt="FloorDAO"/>
+              <img src="floordao.svg" alt="FloorDAO" style="height: 2rem"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://speedtest.edennetwork.io">
+              <img src="eden-logo-white.svg" alt="RPC SpeedTest by Eden"/>
             </a>
           </li>
           <li>
