feat: adjust text

--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
     </header>
     <main>
       <p>
-        Do Your Own Research Ltd provides web3 consultancy and development
-        services to blockchain protocols, products, and applications that are
+        Do Your Own Research Ltd provides consultancy and development
+        services to crypto protocols, products, and applications that are
         looking to build best-in-class user experiences.
       </p>
       <p>
-        We specialise in React UIs on EVM compatible chains using tools such as
+        We specialise in building user interfaces on EVM compatible chains using tools such as
         <a href="https://nextjs.org/">next.js</a>,
-        <a href="https://wagmi.sh/">wagmi.sh</a>,
+        <a href="https://wagmi.sh/">wagmi/viem</a>,
         <a href="https://rainbowkit.com">RainbowKit</a>, and
-        <a href="https://usedapp.io/">useDApp</a>.
+        <a href="https://thegraph.com/">TheGraph</a>.
       </p>
       <p>
         <h3>- Projects -</h3>
