feat: add ƒlayer and sophon

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       }
       h3 {
         font-family: "Bungee Shade", sans-serif;
-        margin-top: 1rem;
+        margin-top: 4rem;
       }
       p {
         max-width: 80ch;
@@ -97,10 +97,10 @@
         flex-wrap: wrap;
         justify-content: center;
       }
-      ul > li {
+      ul li {
         margin: 1rem;
       }
-      img {
+      ul img {
         height: 2.5rem
       }
     </style>
@@ -126,6 +126,16 @@
       <p>
         <h3>- Projects -</h3>
         <ul>
+          <li>
+            <a href="https://flayer.io">
+              <img src="flayer.svg" alt="ƒlayer"/>
+            </a>
+          </li>
+          <li>
+            <a href="https://sophon.xyz">
+              <img src="sophon.svg" alt="Sophon"/>
+            </a>
+          </li>
           <li>
               <a href="https://nftx.io">
                 <img src="nftx_on_black.svg" alt="NFTX"/>
